# valdr

./: .dockerignore  .gitignore  CAMPAIGN_BACKLOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  PORTING.md  README.md  SITE_STATUS.md  convergence-data.json  convergence.html  docker-compose.yml  index.html  performance.html  reference
.claude/agents/: architect.md  compiler-fixer.md  perf-fixer.md  test-fixer.md  translator.md  verifier.md
.github/workflows/: docker.yaml  docker.yml  static.yml
assets/: site.css
crates/edgestash-cloudflare/: CLAUDE.md  Cargo.toml  README.md  wrangler.jsonc
crates/edgestash-cloudflare/assets/: dashboard.html
crates/edgestash-cloudflare/fixtures/: dogfood.sh  smoke-secure.sh  smoke.sh
crates/edgestash-cloudflare/fixtures/demos/: README.md  feature_flags.sh  inventory.sh  matchmaking.sh  otp.sh
crates/edgestash-cloudflare/src/: lib.rs
crates/edgestash-demo/: Cargo.toml
crates/redis-commands/: CLAUDE.md  Cargo.toml
crates/redis-core/: CLAUDE.md  Cargo.toml
crates/redis-core/src/: acl.rs  bio.rs  blocked.rs  blocked_keys.rs  childinfo.rs  client.rs  client_info.rs  command_context.rs  commandlog.rs  config.rs  conn_socket.rs  conn_tls.rs  connection.rs  cpu_affinity.rs  databases.rs  db.rs  debug.rs  defrag.rs  entry.rs  evict.rs  eviction.rs  expire.rs  fifo.rs  keyspace_cow.rs  keyspace_map.rs  keyspace_snapshot.rs  latency.rs  lazyfree.rs  lib.rs  live_config.rs  localtime.rs  logreqres.rs  lru_clock.rs  lrulfu.rs  memory.rs  memory_prefetch.rs  metrics.rs  monotonic.rs  mt19937.rs  mutexqueue.rs  (+23 more)
crates/redis-core/src/rdb/: crc.rs  hash.rs  header.rs  list.rs  listpack.rs  load.rs  lzf.rs  mod.rs  save.rs  set.rs  stream.rs  string.rs  varint.rs  ziplist.rs  zset.rs
crates/redis-core/tests/: conn_transport_kit.rs  small_encoding_poc.rs
crates/redis-core/tests/fixtures/: ca-cert.pem  test-cert.pem  test-key.pem
crates/redis-ds/: CLAUDE.md  Cargo.toml
crates/redis-ds/src/: adlist.rs  dict.rs  hashtable.rs  intset.rs  kvstore.rs  lib.rs  listpack.rs  listpack_listpack.rs  pqsort.rs  quicklist.rs  rax.rs  stream.rs  ziplist.rs  zipmap.rs  zskiplist.rs
crates/redis-protocol/: CLAUDE.md  Cargo.toml
crates/redis-server/: CLAUDE.md  Cargo.toml
crates/redis-server/src/: check_aof.rs  cli.rs  main.rs  runtime_owner.rs  startup.rs
crates/redis-server/tests/: repl_wait_for_sync_kit.rs
crates/redis-types/: CLAUDE.md  Cargo.toml
crates/valdr-engine/: CLAUDE.md  Cargo.toml
crates/valdr-engine/src/: lib.rs
crates/valdr-engine/tests/: lazy_loader_kit.rs
crates/valdr-fixture-runner/: Cargo.toml
crates/valdr-fixture-runner/src/: main.rs
docker/: redis.conf
docs/: AOF_ENDGAME_SPEC.md  BENCHMARKS.md  CHEAP_BULK_TRANSLATION_REDIS_TRIAGE_20260524.md  CONFORMANCE.md  DOCKER.md  DOCKER_PLAN.md  EDGESTASH_COLDSTART_PREP.md  EDGE_WASM_COMMAND_ENGINE.md  FEWER_AGENTS_SCRIPTING_TRIAL_20260523.md  GOAL_2_REBASELINE_20260525.md  HARNESS_MODE_A_VS_B.md  HA_CLUSTER_REPLICATION_ROADMAP.md  KEYSPACE_COW_PAYLOAD_SHARING_SPEC.md  LOOP_OBSERVATIONS_20260523.md  MLUA_EXIT_CONFORMANCE_MAP.md  MLUA_EXIT_PLAN.md  OPTION_D_PERSISTENT_KEYSPACE_SPEC.md  PAUSE_GATE_DESIGN_20260525.md  PERSISTENCE_BORING_SPEC_20260523.md  PERSISTENCE_FRONTIER_20260524.md  PIPELINE_HOTPATH_SYSTEM_DIAGRAM_20260526.md  REDIS_DS_SOURCE_SHAPED_OVERNIGHT_20260524.md  RELEASE_CHECKLIST.md  REPLICATION_INTEGRATION_DASHBOARD.md  REPLICATION_WAIT_ARCHITECTURE_20260526.md  REPL_OBSERVABILITY_OVERNIGHT_PLAN.md  RUNTIME_OWNERSHIP_PLAN.md  RUNTIME_OWNER_HARNESS_RUN.md  RUNTIME_OWNER_HOTPATH_PUSH.md  RUNTIME_OWNER_NEXT_PUSH.md  RUNTIME_OWNER_OVERNIGHT_ARCHITECTURE.md  RUNTIME_OWNER_SCAFFOLD.md  RUST_PERFORMANCE_IMPROVEMENT_PLAYBOOK_20260526.md  SCOPE_AND_GAPS.md  SENTINEL_INVENTORY.md  SINGLE_NODE_CORE_V1_DASHBOARD.md  STREAM_WAKE_WAVES_20260525.md  TCL_ACL_VISIBILITY_WAVE_20260525.md  TCL_BREADTH_OVERNIGHT_20260524.md  TCL_CORE_VISIBILITY_WAVE_20260525.md  (+26 more)
docs/history/: HARNESS_LEARNINGS.md  PATH_TO_DEF3.md  PATH_TO_RUNNABLE.md  RDB_PLAN.md  README.md  RELEASE_READINESS.md  REPLICATION_INTEGRATION_PACKET_EVIDENCE.md  REPLICATION_NEXT_PACKET_DETAIL_20260615.md  SITE_STATUS.md  STRUCTURE_AUDIT.md  TCL_DASHBOARD.md  TCL_TRIAGE.md  TCL_TRIAGE_DATATYPES.md  TCL_TRIAGE_KEYOPS.md  TLS_FAITHFUL_PLAN.md
harness/: PORTING_REDIS_DS.md  VALDR_ENGINE_COMMAND_PLAYBOOK.md  check-unrooted-rs.py  command-registry.json  commit.toml  completion.toml  envelope.toml  gen-command-registry.py  history.jsonl  launch-tcl-breadth-overnight.sh  port-config.sh  run-runtime-owner-loop.sh  run-tcl-breadth-overnight.sh  runners.toml  scheduler.toml  source-drafts.tsv  source.toml  structure_audit.py  translate_loop.sh  type-vocabulary.tsv  unsafe-budgets.toml  watch-tcl-breadth.sh  work-packets.jsonl
harness/architecture/: lifecycle-map.toml  object-vocabulary.tsv
harness/bench/: README.md  aof-matrix.py  aof-rewrite-latency.py  backfill.py  build-site-data.py  default-suite-parts.py  format-results.py  history.py  json-doc-mix.py  official-warm-run.sh  p1-parity-probe.py  pipeline-smoke.py  probe-hypotheses.py  profile-calltree.py  profile-hotspots.py  run-profile-matrix.sh  run.sh
harness/cheap-bulk/: redis-ds-wave-20260524.spec
harness/docker/: bench.sh  smoke.py  smoke.sh
harness/evidence/: ledger.jsonl
harness/fit-bench/: README.md  fit_bench.py
harness/loop/: prompt-template.md
harness/oracle/: README.md  SLOW_FILES.txt  convergence-cache.json  maxmemory-repro.py  persistence-cycle.py  persistence-frontier.py  rdb-diff  reconstruct-convergence.py  run-integration-repl-current.sh  run-single-node-tcl-suite.sh  safe-survey-result.json  safe-survey.py  setup_tcl_runner.sh  single-node-core-dashboard.py  single-node-suite.json  smoke.sh  summarize-survey.py  tcl-frontier-map.py  tcl-suite-inventory.py  tcl-survey.py  valdr-engine-differential.py  valdr-surface-gap.sh  wire-diff
harness/overnight/: 2026-07-18-wave-briefs.md
scripts/: setup-reference.sh
source-drafts/: README.md
source-drafts/redis-commands/: lolwut_lolwut.rs  lolwut_lolwut5.rs  (+2 more)
(+317 files in other folders)
