[workspace]
resolver = "2"
members = [
    "crates/redis-types",
    "crates/redis-protocol",
    "crates/redis-core",
    "crates/valdr-engine",
    "crates/valdr-fixture-runner",
    "crates/edgestash-demo",
    "crates/edgestash-cloudflare",
    "crates/redis-commands",
    "crates/redis-server",
    "crates/redis-ds",
]

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/ianm199/valdr"

[workspace.dependencies]
redis-types = { path = "crates/redis-types" }
redis-protocol = { path = "crates/redis-protocol" }
redis-core = { path = "crates/redis-core" }
valdr-engine = { path = "crates/valdr-engine" }
edgestash-demo = { path = "crates/edgestash-demo" }
edgestash-cloudflare = { path = "crates/edgestash-cloudflare" }
redis-commands = { path = "crates/redis-commands" }
redis-ds = { path = "crates/redis-ds" }
mlua = { version = "0.10", features = ["lua51", "vendored"] }
lua-rs-runtime = { package = "omnilua", path = "../lua-rs-port/crates/lua-rs-runtime" }
libc = "0.2"
mio = { version = "1", features = ["os-poll", "net"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2"
serde_json = "1"
