[package]
name = "redis-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Core server state: RedisServer, Client, RedisDb, RedisObject, CommandContext."

[dependencies]
redis-types = { workspace = true }
redis-protocol = { workspace = true }
fast-float = "0.2"
log = "0.4"
