[package]
name = "redis-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Core server state: RedisServer, Client, RedisDb, RedisObject, CommandContext."

[features]
default = []
cpu-affinity = []
no_processor_clock = []
tls = []

[dependencies]
redis-types = { workspace = true }
redis-protocol = { workspace = true }
redis-ds = { workspace = true }
fast-float = "0.2"
log = "0.4"
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde_json = { workspace = true }
