[package]
name = "redis-ds"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Redis data-structure encodings (listpack, quicklist, intset, rax, dict, kvstore, hashtable, zskiplist, adlist, stream, ziplist) — skeleton stubs awaiting Phase 4/5 translation."

[dependencies]
redis-types = { workspace = true }
