[package]
name = "redis-ds"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
description = "Redis data-structure encodings: listpack, quicklist, intset, rax, dict, kvstore, hashtable, zskiplist, adlist, stream, and ziplist."

[dependencies]
redis-types = { workspace = true }
