[package]
name = "redis-server"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
description = "Standalone redis-server binary."

[dependencies]
redis-types = { workspace = true }
redis-protocol = { workspace = true }
redis-core = { workspace = true }
redis-commands = { workspace = true }
libc = { workspace = true }
mio = { workspace = true }
rustls = { workspace = true }
tikv-jemallocator = { workspace = true, optional = true }

[features]
default = ["eager-dispatch-warmup"]
eager-dispatch-warmup = []
allocator-jemalloc = ["dep:tikv-jemallocator"]

[[bin]]
name = "redis-server"
path = "src/main.rs"
